[package]
name = "ls_net"
version = "0.1.1"
edition = "2024"
description = "A CLI tool for displaying local network interfaces, IP addresses and routes."
authors = ["Guangyu He <fredhgy2010@gmail.com>"]
license = "MIT"
repository = "https://github.com/guangyu-he/ls_net"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
if-addrs = "0.13.4"
colored = "3.0.0"
anyhow = "1.0.98"